--- a/galeria.html
+++ b/galeria.html
@@ -2,7 +2,7 @@
 <html lang="en"><head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>León Lyon - Galería</title>
+<title>Cristian Seguel Olivos - Distrito 13 - i71</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <script>
       tailwind.config = {
@@ -45,7 +45,7 @@
   <img src="img/logo.png" alt="Logo León Lyon" class="h-8 w-8">
   <h1 class="text-xl font-bold text-foreground-light dark:text-foreground-dark"></h1>
 </div>
-          <span class="text-xl font-bold">León Lyon Diputado I-44</span>
+          <span class="text-xl font-bold">Cristian Seguel Olivos - Distrito 13 - i71</span>
         </a>
       </div>
 
@@ -78,7 +78,7 @@
       <div class="flex items-center gap-3">
         <img src="img/logo.png" alt="Logo León Lyon" class="h-8 w-8">
 
-        <h2 class="text-lg font-bold text-foreground-light dark:text-foreground-dark">León Lyon</h2>
+        <h2 class="text-lg font-bold text-foreground-light dark:text-foreground-dark">Cristian Seguel</h2>
       </div>
       <button id="btn-close-drawer" class="p-2 rounded-md hover:bg-slate-100 dark:hover:bg-slate-800 focus:outline-none focus:ring-2 focus:ring-primary" aria-label="Cerrar menú">
         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -100,7 +100,7 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
   if (navigator.share) {
     try {
       await navigator.share({
-        title: "León Lyon",
+        title: "Cristian Seguel Olivos - Distrito 13 - i71",
         text: "Mira que interesante este Candidato",
         url: "https://leoncandidatov02.vercel.app/"
       });
@@ -114,15 +114,15 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
 </script>
     </nav>
     <div class="mt-6 text-sm text-foreground-light/60 dark:text-foreground-dark/60">
-      <p>© 2025 León Lyon</p>
+      <p>© 2025 Cristian Seguel</p>
     </div>
   </aside>
 </div>
 <main class="flex-grow container mx-auto px-4 sm:px-6 lg:px-8 py-12">
 <div class="text-center mb-12">
-<h2 class="text-4xl font-extrabold tracking-tight text-gray-900 dark:text-white sm:text-5xl">Galería de Campaña</h2>
+<h2 class="text-4xl font-extrabold tracking-tight text-gray-900 dark:text-white sm:text-5xl">Galería de imagenes - Redes Sociales</h2>
 <p class="mt-4 max-w-2xl mx-auto text-lg text-gray-500 dark:text-gray-400">
-            Explora momentos clave de la campaña de León Lyon, incluyendo eventos comunitarios, reuniones y actividades representativas. Esta galería se actualiza regularmente con nuevas imágenes.
+            Sigueme en redes sociales, Instagram - Facebook - X - TikTok
           </p>
 </div>
 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 sm:gap-6 lg:gap-8">
