--- a/propuestas.html
+++ b/propuestas.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>León Lyon - Propuestas</title>
+<title>Cristian Seguel Olivos - Vote i 71</title>
 <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
 <link crossorigin="" href="https://fonts.gstatic.com/" rel="preconnect"/>
 <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@400;500;700;900&amp;display=swap" rel="stylesheet"/>
@@ -60,7 +60,7 @@ tailwind.config = {
   <img src="img/logo.png" alt="Logo León Lyon" class="h-8 w-8">
   <h1 class="text-xl font-bold text-foreground-light dark:text-foreground-dark"></h1>
 </div>
-          <span class="text-xl font-bold">León Lyon Diputado I-44</span>
+          <span class="text-xl font-bold">Cristian Seguel Olivos - Vote i 71</span>
         </a>
       </div>
 
@@ -95,9 +95,9 @@ tailwind.config = {
   <aside id="drawer" role="dialog" aria-modal="true" aria-label="Menú principal" class="absolute left-0 top-0 h-full w-72 max-w-full bg-background-light dark:bg-background-dark shadow-xl p-6 drawer-hidden">
     <div class="flex items-center justify-between mb-6">
       <div class="flex items-center gap-3">
-        <img src="img/logo.png" alt="Logo León Lyon" class="h-8 w-8">
+        <img src="img/logo.png" alt="Logo Cristian Seguel Olivos" class="h-8 w-8">
 
-        <h2 class="text-lg font-bold text-slate-900 dark:text-white">León Lyon</h2>
+        <h2 class="text-lg font-bold text-slate-900 dark:text-white">Cristian Seguel</h2>
       </div>
 
       <button id="btn-close-drawer" class="p-2 rounded-md hover:bg-slate-100 dark:hover:bg-slate-800 focus:outline-none focus:ring-2 focus:ring-primary" aria-label="Cerrar menú">
@@ -122,7 +122,7 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
   if (navigator.share) {
     try {
       await navigator.share({
-        title: "León Lyon",
+        title: "Cristian Seguel Olivos - Distrito 13 - i71",
         text: "Mira que interesante este Candidato",
         url: "https://leoncandidatov02.vercel.app/"
       });
@@ -137,7 +137,7 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
     </nav>
 
     <div class="mt-6 text-sm text-slate-500 dark:text-slate-400">
-      <p>© 2025 León Lyon</p>
+      <p>© 2025 Cristian Seguel Olivos</p>
     </div>
   </aside>
 </div>
@@ -145,7 +145,7 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
 <!-- Main -->
 <main class="flex-grow container mx-auto px-4 sm:px-6 lg:px-8 py-12">
   <div class="max-w-4xl mx-auto">
-    <h1 class="text-4xl md:text-5xl font-extrabold tracking-tighter mb-4 text-center">Nuestras Propuestas</h1>
+    <h1 class="text-4xl md:text-5xl font-extrabold tracking-tighter mb-4 text-center">Mis Propuestas para un Chile más desarrollado</h1>
     <p class="text-lg text-text-muted-light dark:text-text-muted-dark text-center mb-12">Un plan claro y concreto para construir un futuro mejor para todos.</p>
     <div class="space-y-8">
       <div class="bg-background-light dark:bg-background-dark/50 border border-border-light dark:border-border-dark rounded-xl p-8 transition-shadow hover:shadow-lg">
@@ -158,19 +158,19 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
       </div>
       <div class="bg-background-light dark:bg-background-dark/50 border border-border-light dark:border-border-dark rounded-xl p-8 transition-shadow hover:shadow-lg">
         <h2 class="text-2xl font-bold text-primary mb-3">Deporte</h2>
-        <p class="text-text-muted-light dark:text-text-muted-dark">Promover la actividad física con la creación de más espacios deportivos y el apoyo a ligas locales.</p>
+        <p class="text-text-muted-light dark:text-text-muted-dark">Promover la actividad física con la creación de más espacios deportivos, incentivar competencas y apoyando a ligas locales.</p>
       </div>
       <div class="bg-background-light dark:bg-background-dark/50 border border-border-light dark:border-border-dark rounded-xl p-8 transition-shadow hover:shadow-lg">
         <h2 class="text-2xl font-bold text-primary mb-3">Trabajo</h2>
-        <p class="text-text-muted-light dark:text-text-muted-dark">Generar empleo a través de incentivos a pequeñas y medianas empresas y programas de capacitación laboral.</p>
+        <p class="text-text-muted-light dark:text-text-muted-dark">Generar las condiciones mediante proyectos de ley, que fomenten la inversión, al mismo tiempo, capacitar pequeñas y medianas empresas en tecnologias modernas.</p>
       </div>
       <div class="bg-background-light dark:bg-background-dark/50 border border-border-light dark:border-border-dark rounded-xl p-8 transition-shadow hover:shadow-lg">
         <h2 class="text-2xl font-bold text-primary mb-3">Emprendimiento</h2>
-        <p class="text-text-muted-light dark:text-text-muted-dark">Facilitar el acceso a capital y mentoría para nuevos emprendedores.</p>
+        <p class="text-text-muted-light dark:text-text-muted-dark">Como emprendedor, se el camino a recorrer para lograr un emprendimiento estable en el tiempo, fomentare la mentoría para nuevos emprendedores. De igual modo, fiscalizare que los fondos destinados a fomentar el emprendimiento, lleguen a quienes realmente cumplen con los requisitos.</p>
       </div>
       <div class="bg-background-light dark:bg-background-dark/50 border border-border-light dark:border-border-dark rounded-xl p-8 transition-shadow hover:shadow-lg">
         <h2 class="text-2xl font-bold text-primary mb-3">Tecnología</h2>
-        <p class="text-text-muted-light dark:text-text-muted-dark">Impulsar la conectividad y la alfabetización digital en toda la población.</p>
+        <p class="text-text-muted-light dark:text-text-muted-dark">Como Técnico Electrónico de profesión, conozco, mediante la experiencia diaria, cómo ha ido evolucionando la tecnología en los últimos años. Debemos adoptar nuevas tecnologías para nuestros trabajos, emprendimientos y actividades cotidianas. Votaré a favor de un desarrollo tecnológico para nuestro país.</p>
       </div>
       <a
   href="https://wa.me/56967668323?text=Hola%20quiero%20más%20información"
@@ -197,7 +197,7 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
 <!-- Footer -->
 <footer class="bg-background-light dark:bg-background-dark mt-16 border-t border-border-light dark:border-border-dark">
   <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 text-center text-text-muted-light dark:text-text-muted-dark">
-    <p>© 2025 León Lyon. Todos los derechos reservados.</p>
+    <p>© 2025 Cristian Seguel Olivos - Vote i 71</p>
     <div class="flex justify-center gap-4 mt-4">
       <a class="hover:text-primary" href="#">Facebook</a>
       <a class="hover:text-primary" href="#">Twitter</a>
