--- a/propuestas.html
+++ b/propuestas.html
@@ -80,7 +80,7 @@ tailwind.config = {
         <a class="text-sm font-medium hover:text-primary dark:hover:text-primary" href="index.html">Inicio</a>
         <a class="text-sm font-medium hover:text-primary dark:hover:text-primary" href="propuestas.html">Propuestas</a>
         <a class="text-sm font-medium hover:text-primary dark:hover:text-primary" href="galeria.html">Galería</a>
-        <a class="text-sm font-medium hover:text-primary dark:hover:text-primary" href="compromisos.html">Compromisos</a>
+        <a class="text-sm font-medium hover:text-primary dark:hover:text-primary" href="compromisos.html">Quien Soy?</a>
       </nav>
     </div>
   </div>
@@ -111,7 +111,7 @@ tailwind.config = {
       <a class="px-3 py-2 rounded-md text-sm font-medium hover:bg-slate-100 dark:hover:bg-slate-800" href="index.html">Inicio</a>
       <a class="px-3 py-2 rounded-md text-sm font-medium hover:bg-slate-100 dark:hover:bg-slate-800" href="propuestas.html">Propuestas</a>
       <a class="px-3 py-2 rounded-md text-sm font-medium hover:bg-slate-100 dark:hover:bg-slate-800" href="galeria.html">Galería</a>
-      <a class="px-3 py-2 rounded-md text-sm font-medium hover:bg-slate-100 dark:hover:bg-slate-800" href="compromisos.html">Compromisos</a>
+      <a class="px-3 py-2 rounded-md text-sm font-medium hover:bg-slate-100 dark:hover:bg-slate-800" href="compromisos.html">Quien Soy?</a>
 
    <button id="shareBtn" class="p-2 rounded-md bg-primary text-white">
   Comparte a este candidato
