--- a/galeria.html
+++ b/galeria.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Cristian Seguel Olivos - Distrito 13 - i71</title>
@@ -21,8 +22,8 @@
           },
         },
       }
-    </script>
-    <style>
+</script>
+<style>
 .section-title { border-left: 4px solid #1173d4; padding-left: 1rem; }
 .drawer-hidden { transform: translateX(-100%); }
 .drawer-visible { transform: translateX(0); transition: transform .26s cubic-bezier(.2,.8,.2,1); }
@@ -37,7 +38,6 @@
 <header class="sticky top-0 z-10 bg-background-light/80 dark:bg-background-dark/80 backdrop-blur-sm border-b border-border-light dark:border-border-dark shadow-md">
   <div class="container mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex items-center justify-between h-16">
-
       <!-- Logo -->
       <div class="flex items-center gap-4">
         <a class="flex items-center gap-2 text-text-light dark:text-text-dark" href="index.html">
@@ -48,24 +48,19 @@
           <span class="text-xl font-bold">Cristian Seguel Olivos - Distrito 13 - i71</span>
         </a>
       </div>
-
-
       <!-- Botones y drawer (móvil) -->
       <div class="flex items-center gap-4 md:hidden">
         <button id="btn-open-drawer" aria-controls="drawer" aria-expanded="false" class="p-2 rounded-md hover:bg-slate-100 dark:hover:bg-slate-800 focus:outline-none focus:ring-2 focus:ring-primary" aria-label="Abrir menú">
-          <!-- icono hamburguesa -->
           <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
           </svg>
         </button>
       </div>
-
-      <!-- (mantengo nav de md en adelante para accesibilidad) -->
       <nav class="hidden md:flex items-center gap-6" aria-label="Menú principal">
         <a class="text-sm font-medium hover:text-primary dark:hover:text-primary" href="index.html">Inicio</a>
         <a class="text-sm font-medium hover:text-primary dark:hover:text-primary" href="propuestas.html">Propuestas</a>
         <a class="text-sm font-medium hover:text-primary dark:hover:text-primary" href="galeria.html">Galería</a>
-        <a class="text-sm font-medium hover:text-primary dark:hover:text-primary" href="compromisos.html">Compromisos</a>
+        <a class="text-sm font-medium hover:text-primary dark:hover:text-primary" href="compromisos.html">Quien Soy?</a>
       </nav>
     </div>
   </div>
@@ -77,7 +72,6 @@
     <div class="flex items-center justify-between mb-6">
       <div class="flex items-center gap-3">
         <img src="img/logo.png" alt="Logo León Lyon" class="h-8 w-8">
-
         <h2 class="text-lg font-bold text-foreground-light dark:text-foreground-dark">Cristian Seguel</h2>
       </div>
       <button id="btn-close-drawer" class="p-2 rounded-md hover:bg-slate-100 dark:hover:bg-slate-800 focus:outline-none focus:ring-2 focus:ring-primary" aria-label="Cerrar menú">
@@ -90,12 +84,11 @@
       <a href="index.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-slate-100 dark:hover:bg-slate-800">Inicio</a>
       <a href="propuestas.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-slate-100 dark:hover:bg-slate-800">Propuestas</a>
       <a href="galeria.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-slate-100 dark:hover:bg-slate-800">Galería</a>
-      <a href="compromisos.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-slate-100 dark:hover:bg-slate-800">Compromisos</a>
-  <button id="shareBtn" class="p-2 rounded-md bg-primary text-white">
-  Comparte a este candidato
-</button>
-
-<script>
+      <a href="compromisos.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-slate-100 dark:hover:bg-slate-800">Quien Soy?</a>
+      <button id="shareBtn" class="p-2 rounded-md bg-primary text-white">
+        Comparte a este candidato
+      </button>
+      <script>
 document.getElementById("shareBtn").addEventListener("click", async () => {
   if (navigator.share) {
     try {
@@ -143,18 +136,28 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
 </div>
 <div class="group aspect-w-1 aspect-h-1 block w-full overflow-hidden rounded-lg bg-gray-100 dark:bg-gray-800 focus-within:ring-2 focus-within:ring-primary focus-within:ring-offset-2 focus-within:ring-offset-background-light dark:focus-within:ring-offset-background-dark">
 <div class="w-full h-full bg-center bg-cover transition-transform duration-300 group-hover:scale-105" style='background-image: url("https://lh3.googleusercontent.com/aida-public/AB6AXuC1IJtAfp2fuIpZJ0foA97oOJ-zBk-Ws2JjlzMwG8bpg1uyYcf6fuBEN32I6PRs3AHxvVomqP30WOnlU2BDzJgLkvcayot_y8_N70c9Vv3KXaFn1Y8OBkWK82v8IH6kUOOUCl30pq2VIyhC-R6IGzzDupobM6J6RwKZPY6hVNBeE1z7VFleopXmmbyfdtbSCvMYyYF6eD9hoOux5v0-7G_5NpSUgMxUI3P6bxuWnJ8hQEkem2Ss9Mq1vDxUJ3blkAXDju8bk3amr95B");'></div>
+</div>
+<!-- Instagram Reel Embed -->
+<div class="col-span-full flex justify-center">
+  <div class="w-full max-w-lg">
+    <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DPJjrkYDTF-/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="14" style="background: white; border-radius: 3px; overflow: hidden; padding: 0; position: relative; width: 100%;">
+      <div style="padding: 8px; background: #f8f9fa; border-radius: 3px; margin: 0;">
+        <a href="https://www.instagram.com/reel/DPJjrkYDTF-/?utm_source=ig_web_copy_link&amp;igsh=MzRlODBiNWFlZA==" style="background: #26a69a; border-radius: 3px; box-shadow: 0 0 1px rgba(0,0,0,0.5), 0 1px 3px rgba(0,0,0,0.5); color: white; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif; font-size: 14px; font-style: normal; font-weight: 500; line-height: 18px; padding: 6px 9px; text-align: center; text-decoration: none; width: auto;" target="_blank">Ver en Instagram</a>
+      </div>
+      <script async src="//www.instagram.com/embed.js"></script>
+    </blockquote>
+  </div>
+</div>
+</div>
 <a
   href="https://wa.me/56967668323?text=Hola%20quiero%20más%20información"
   target="_blank"
   rel="noopener noreferrer"
   class="fixed left-3/4 top-3/4 z-50 -translate-x-1/2 -translate-y-1/2 flex flex-col items-center space-y-2"
 >
-  <!-- Mensaje -->
   <span class="bg-green-500 text-white text-sm px-3 py-1 rounded-full shadow-lg">
     Contáctame
   </span>
-
-  <!-- Botón -->
   <div class="w-14 h-14 bg-green-500 rounded-full flex items-center justify-center shadow-lg hover:bg-green-600 transition">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" fill="white" class="w-8 h-8">
       <path d="M16 .667C7.64.667.667 7.64.667 16c0 2.828.76 5.59 2.2 7.997L.667 31.333l7.543-2.133A15.27 15.27 0 0016 31.333c8.36 0 15.333-6.973 15.333-15.333S24.36.667 16 .667zm0 27.2a11.86 11.86 0 01-6.05-1.657l-.433-.257-4.48 1.27 1.197-4.627-.283-.477A11.83 11.83 0 014.133 16c0-6.507 5.36-11.867 11.867-11.867 6.507 0 11.867 5.36 11.867 11.867 0 6.507-5.36 11.867-11.867 11.867zm6.533-8.867c-.36-.18-2.12-1.047-2.453-1.167-.333-.12-.573-.18-.813.18-.24.36-.933 1.167-1.147 1.407-.213.24-.426.27-.787.09-.36-.18-1.52-.56-2.893-1.787-1.07-.953-1.787-2.133-1.993-2.493-.207-.36-.022-.553.158-.733.163-.163.36-.426.54-.64.18-.213.24-.36.36-.6.12-.24.06-.45-.03-.63-.09-.18-.813-1.96-1.113-2.68-.293-.707-.593-.61-.813-.62l-.693-.013c-.24 0-.63.09-.96.45-.33.36-1.26 1.233-1.26 3.013s1.293 3.487 1.473 3.727c.18.24 2.54 3.887 6.16 5.447.86.37 1.527.59 2.047.753.86.273 1.64.233 2.253.142.687-.103 2.12-.867 2.42-1.707.3-.84.3-1.56.21-1.707-.09-.15-.33-.24-.69-.42z"/>
@@ -162,8 +165,8 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
   </div>
 </a>
 </div>
-</div>
 </main>
 </div>
 <script src="js/drawer.js"></script>
-</body></html>
+</body>
+</html>
