--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <a class="text-sm font-medium hover:text-primary dark:hover:text-primary" href="index.html">Inicio</a>
         <a class="text-sm font-medium hover:text-primary dark:hover:text-primary" href="propuestas.html">Propuestas</a>
         <a class="text-sm font-medium hover:text-primary dark:hover:text-primary" href="galeria.html">Galería</a>
-        <a class="text-sm font-medium hover:text-primary dark:hover:text-primary" href="compromisos.html">Compromisos</a>
+        <a class="text-sm font-medium hover:text-primary dark:hover:text-primary" href="compromisos.html">Quien Soy?</a>
       </nav>
 
 
@@ -98,7 +98,7 @@
       <a href="index.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-slate-100 dark:hover:bg-slate-800">Inicio</a>
       <a href="propuestas.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-slate-100 dark:hover:bg-slate-800">Propuestas</a>
       <a href="galeria.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-slate-100 dark:hover:bg-slate-800">Galería</a>
-      <a href="compromisos.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-slate-100 dark:hover:bg-slate-800">Compromisos</a>
+      <a href="compromisos.html" class="px-3 py-2 rounded-md text-sm font-medium hover:bg-slate-100 dark:hover:bg-slate-800">Quien Soy?</a>
       <button id="shareBtn" class="p-2 rounded-md bg-primary text-white">
   Comparte a este candidato
 </button>
