--- a/propuestas.html
+++ b/propuestas.html
@@ -150,15 +150,15 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
     <div class="space-y-8">
       <div class="bg-background-light dark:bg-background-dark/50 border border-border-light dark:border-border-dark rounded-xl p-8 transition-shadow hover:shadow-lg">
         <h2 class="text-2xl font-bold text-primary mb-3">Educación</h2>
-        <p class="text-text-muted-light dark:text-text-muted-dark">Mi idea en educación es fomentar la educación STEAM desde la infancia, garantizando acceso a tecnología y capacitación docente.</p>
+        <p class="text-justify text-text-muted-light dark:text-text-muted-dark">Trabajaremos por un cambio al actual sistema educacional, tanto en su actual infraestructura como incorporando desde la más temprana infancia tecnología y herramientas de desarrollo para nuestros estudiantes, con especial foco en la educación técnico profesional promoviendo el emprendimiento y la innovación, no podemos dejar a nuestros estudiantes en un entorno obsoleto, mientras el mundo avanza a pasos agigantados.</p>
       </div>
       <div class="bg-background-light dark:bg-background-dark/50 border border-border-light dark:border-border-dark rounded-xl p-8 transition-shadow hover:shadow-lg">
         <h2 class="text-2xl font-bold text-primary mb-3">Seguridad</h2>
-        <p class="text-text-muted-light dark:text-text-muted-dark">En seguridad vamos a implementar programas de vigilancia comunitaria y aumentar la presencia policial en zonas de alto riesgo.</p>
+        <p class="text-justify text-text-muted-light dark:text-text-muted-dark">Promover el fortalecimiento integral de nuestras policías, dotándolas de los recursos materiales y humanos necesarios, más y mejor inteligencia, prevención temprana efectiva en nuestros barrios integrando a todos los actores de la sociedad, mejorar y potenciar las facultades de las policías municipales para combatir de forma efectiva el delito.</p>
       </div>
       <div class="bg-background-light dark:bg-background-dark/50 border border-border-light dark:border-border-dark rounded-xl p-8 transition-shadow hover:shadow-lg">
-        <h2 class="text-2xl font-bold text-primary mb-3">Deporte</h2>
-        <p class="text-text-muted-light dark:text-text-muted-dark">Promover la actividad física con la creación de más espacios deportivos, incentivar competencas y apoyando a ligas locales.</p>
+        <h2 class="text-2xl font-bold text-primary mb-3">Salud</h2>
+        <p class="text-justify text-text-muted-light dark:text-text-muted-dark">Fiscalizar la gestión de nuestras Hospitales y centros de atención primaria, incorporar bases de datos y digitalización de todo el sistema, que la salud llegue a tiempo a nuestra gente, fortalecer las alianzas publico privadas para reducir las listas de espera que hoy atormentan a nuestra gente, especialmente a nuestros adultos mayores.</p>
       </div>
       <div class="bg-background-light dark:bg-background-dark/50 border border-border-light dark:border-border-dark rounded-xl p-8 transition-shadow hover:shadow-lg">
         <h2 class="text-2xl font-bold text-primary mb-3">Trabajo</h2>
@@ -166,12 +166,9 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
       </div>
       <div class="bg-background-light dark:bg-background-dark/50 border border-border-light dark:border-border-dark rounded-xl p-8 transition-shadow hover:shadow-lg">
         <h2 class="text-2xl font-bold text-primary mb-3">Emprendimiento</h2>
-        <p class="text-text-muted-light dark:text-text-muted-dark">Como emprendedor, se el camino a recorrer para lograr un emprendimiento estable en el tiempo, fomentare la mentoría para nuevos emprendedores. De igual modo, fiscalizare que los fondos destinados a fomentar el emprendimiento, lleguen a quienes realmente cumplen con los requisitos.</p>
+        <p class="text-justify text-text-muted-light dark:text-text-muted-dark">Es un camino que me ha tocado recorrer, por lo que conozco las ineficiencias e injusticias del sistema, nos haremos cargo de mejorar el acceso a programas de financiamiento, acceso a mentorías y acompañamientos, agilizar tramitaciones, bonos por formalización, exenciones tributarias temporales, No puede ser que el sistema hoy “sepulte” a quienes luchan por emprender.</p>
       </div>
-      <div class="bg-background-light dark:bg-background-dark/50 border border-border-light dark:border-border-dark rounded-xl p-8 transition-shadow hover:shadow-lg">
-        <h2 class="text-2xl font-bold text-primary mb-3">Tecnología</h2>
-        <p class="text-text-muted-light dark:text-text-muted-dark">Como Técnico Electrónico de profesión, conozco, mediante la experiencia diaria, cómo ha ido evolucionando la tecnología en los últimos años. Debemos adoptar nuevas tecnologías para nuestros trabajos, emprendimientos y actividades cotidianas. Votaré a favor de un desarrollo tecnológico para nuestro país.</p>
-      </div>
+     
       <a
   href="https://wa.me/56967668323?text=Hola%20quiero%20más%20información"
   target="_blank"
