--- a/propuestas.html
+++ b/propuestas.html
@@ -162,7 +162,7 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
       </div>
       <div class="bg-background-light dark:bg-background-dark/50 border border-border-light dark:border-border-dark rounded-xl p-8 transition-shadow hover:shadow-lg">
         <h2 class="text-2xl font-bold text-primary mb-3">Trabajo</h2>
-        <p class="text-text-muted-light dark:text-text-muted-dark">Generar las condiciones mediante proyectos de ley, que fomenten la inversión, al mismo tiempo, capacitar pequeñas y medianas empresas en tecnologias modernas.</p>
+        <p class="text-justify text-text-muted-light dark:text-text-muted-dark">Generar las condiciones mediante proyectos de ley, que fomenten la inversión, al mismo tiempo, capacitar pequeñas y medianas empresas en tecnologias modernas.</p>
       </div>
       <div class="bg-background-light dark:bg-background-dark/50 border border-border-light dark:border-border-dark rounded-xl p-8 transition-shadow hover:shadow-lg">
         <h2 class="text-2xl font-bold text-primary mb-3">Emprendimiento</h2>
