--- a/compromisos.html
+++ b/compromisos.html
@@ -111,13 +111,13 @@ tailwind.config = {
       <!-- Biography Section -->
       <div class="bg-background-light dark:bg-background-dark p-8 rounded-xl shadow-lg border border-primary/20">
         <h3 class="text-2xl font-bold text-foreground-light dark:text-foreground-dark mb-4 section-title">Sobre Cristian Seguel</h3>
-        <p class="text-base text-foreground-light/80 dark:text-foreground-dark/80 leading-relaxed">
+        <p class="text-justify text-text-muted-light dark:text-text-muted-dark">
           Cristian Seguel Olivos, de profesión técnico electrónico, hoy pequeño empresario, casado, padre de familia, que conoce de cerca la realidad y las dificultades de quienes luchan día a día por salir adelante. No proviene de una familia con privilegios, pero gracias a su esfuerzo, constancia y empuje logró abrirse camino en el mundo del emprendimiento.
         </p>
         <div class="my-6 flex justify-center">
           <img src="img/D13img71.jpg" alt="Cristian Seguel" class="w-full max-w-md h-auto rounded-lg shadow-md border border-border-light dark:border-border-dark">
         </div>
-        <p class="text-base text-foreground-light/80 dark:text-foreground-dark/80 leading-relaxed">
+        <p class="text-justify text-text-muted-light dark:text-text-muted-dark">
           Hoy, cansado de los abusos e ineficiencias, tanto del Estado como del sector privado, y de cómo se le da la espalda a la gente trabajadora y de esfuerzo, decidió asumir un rol protagónico en política, presentando su candidatura a diputado por el Distrito 13 con el respaldo del Partido de la Gente. Su compromiso es con la Gente, y en el Congreso su rol será claro: fiscalizar con firmeza para que los recursos públicos lleguen realmente a quienes los necesitan, y presentar proyectos de ley enfocados en seguridad, anti corrupción y el apoyo directo a los emprendedores y pequeños empresarios, porque son ellos quienes generan oportunidades, empleo y en definitiva mueven a nuestro país. Cristian Seguel no representa ni a la derecha ni a la izquierda, no representa el pasado, representa el presente y el futuro, a las personas que quieren un Chile más justo, transparente y con igualdad de oportunidades. Su causa es la de miles de familias que buscan progresar con dignidad y trabajo, sin pedir favores ni privilegios.
         </p>
       </div>
