--- a/index.html
+++ b/index.html
@@ -174,14 +174,55 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
           </button>
         </div>
 
-        <div class="bg-background-light dark:bg-background-dark p-6 rounded-xl shadow-lg border border-slate-200 dark:border-slate-800">
-          <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-4">Eventos Públicos</h3>
-          <p class="mb-2 font-semibold text-slate-700 dark:text-slate-300">Próximo evento: Todos los viernes en la Plaza Central, 18 horas.</p>
-          <p class="mb-6 text-slate-600 dark:text-slate-400">¡Reunión con vecinos! Te esperamos para compartir ideas y construir juntos un mejor futuro.</p>
-          <button onclick="window.location.href='galeria.html'" class="bg-primary/10 hover:bg-primary/20 text-primary font-bold py-2 px-4 rounded-lg text-sm transition-colors dark:bg-primary/20 dark:hover:bg-primary/30">
-            Ver images de los eventos
-          </button>
-        </div>
+       <div class="bg-white dark:bg-slate-900 p-6 rounded-xl shadow-lg border border-blue-400">
+
+  <style>
+    @keyframes glow {
+      0%, 100% {
+        text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px red, 0 0 30px red;
+      }
+      50% {
+        text-shadow: 0 0 2px #fff, 0 0 5px red, 0 0 10px red;
+      }
+    }
+  </style>
+
+  <h3 class="text-2xl font-bold mb-4 bg-red-600 text-white px-6 py-2 rounded-lg inline-flex justify-center items-center gap-2 animate-[glow_1s_ease-in-out_infinite] w-full text-center">
+    <span class="text-yellow-400">★</span>
+    PARISI PRESIDENTE!!
+    <span class="text-yellow-400">★</span>
+  </h3>
+
+  <p class="mb-2 font-semibold text-slate-700 dark:text-slate-300">
+    Ni fachos ni comunachos! somos el Partido de la Gente
+  </p>
+  <p class="mb-6 text-slate-600 dark:text-slate-400">
+    Conoce nuestras propuestas de un Chile para los chilenos
+  </p>
+
+  <!-- Botón Descargar -->
+  <a href="files/Parisi2026.pdf" download
+    class="block bg-primary/10 hover:bg-primary/20 text-primary font-bold py-2 px-4 rounded-lg text-sm transition-colors dark:bg-primary/20 dark:hover:bg-primary/30 border border-blue-400 w-full text-center">
+    Descargar Programa de Gobierno en PDF
+  </a>
+
+  <!-- Botón Compartir -->
+  <button onclick="navigator.share ? navigator.share({ 
+      title: 'Programa de Gobierno PARISI 2026', 
+      text: 'Descarga el programa de gobierno de Parisi 2026 aquí:', 
+      url: window.location.origin + '/files/Parisi2026.pdf' 
+    }) : alert('Copia y comparte este enlace: ' + window.location.origin + '/files/Parisi2026.pdf')"
+    class="mt-3 block bg-primary/10 hover:bg-primary/20 text-primary font-bold py-2 px-4 rounded-lg text-sm transition-colors dark:bg-primary/20 dark:hover:bg-primary/30 border border-blue-400 w-full text-center">
+    Compartir Programa
+  </button>
+
+</div>
+
+
+
+
+
+
       </div>
 <!-- Redes Sociales -->
 <div class="flex justify-center space-x-8 mt-10">
