--- a/galeria.html
+++ b/galeria.html
@@ -95,7 +95,7 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
       await navigator.share({
         title: "Cristian Seguel Olivos - Distrito 13 - i71",
         text: "Mira que interesante este Candidato",
-        url: "https://leoncandidatov02.vercel.app/"
+        url: "https://cristianseguel.vercel.app/"
       });
     } catch (err) {
       console.log("Compartir cancelado", err);
