--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
       await navigator.share({
         title: "Cristian Seguel Olivos - Candidato a Diputado D13 i-71",
         text: "Mira que interesante este Candidato",
-        url: "https://leoncandidatov02.vercel.app/"
+        url: "https://cristianseguel.vercel.app/"
       });
     } catch (err) {
       console.log("Compartir cancelado", err);
