--- a/index.html
+++ b/index.html
@@ -157,12 +157,19 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
      <div class="md:col-span-1 bg-background-light dark:bg-background-dark p-6 rounded-xl shadow-lg border border-slate-200 dark:border-slate-800">
   <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-4">Perfil del Candidato</h3>
   <div class="space-y-3 text-slate-600 dark:text-slate-400">
-    <p><strong>Nombre:</strong> Cristian Arturo Seguel Olivos</p>
-    <p><strong>Trayectoria:</strong> Técnico Electrónico y emprendedor. No proviene de una familia adinerada; se ha formado con esfuerzo propio.</p>
-    <p><strong>Motivación:</strong> Cansado de las malas prácticas tanto privadas como del Estado, busca representar directamente a la gente de su distrito, con especial foco en los emprendedores y trabajadores.</p>
-    <p><strong>Postura política:</strong> Candidato del Partido de la Gente (PDG). Sin militancias anteriores, ni de izquierda ni de derecha; enfoque ciudadano y pragmático.</p>
-    <p><strong>Rol en el Congreso:</strong> Fiscalizar y proponer proyectos que apoyen a emprendedores, trabajadores independientes y familias de clase media.</p>
-  </div>
+  <p><strong>Nombre:</strong> Cristian Arturo Seguel Olivos</p>
+  <p><strong>Trayectoria:</strong> Técnico Electrónico y emprendedor. No proviene de una familia adinerada; se ha formado con esfuerzo propio.</p>
+  <p><strong>Motivación:</strong> Cansado de las malas prácticas tanto privadas como del Estado, busca representar directamente a la gente de su distrito, con especial foco en los emprendedores y trabajadores.</p>
+  <p><strong>Postura política:</strong> Candidato del Partido de la Gente (PDG). Sin militancias anteriores, ni de izquierda ni de derecha; enfoque ciudadano y pragmático.</p>
+  <p><strong>Rol en el Congreso:</strong> Fiscalizar y proponer proyectos que apoyen a emprendedores, trabajadores independientes y familias de clase media.</p>
+
+  <!-- Botón Ver Más -->
+  <a href="compromisos.html"
+    class="mt-3 inline-block bg-white hover:bg-blue-50 text-blue-600 font-bold py-2 px-4 rounded-lg border border-blue-400 text-center">
+    Ver más...
+  </a>
+</div>
+
 </div>
 
       <div class="md:col-span-2 space-y-12">
