--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
 <!-- Redes Sociales -->
 <div class="flex justify-center space-x-8 mt-10">
   <!-- Facebook -->
-  <a href="https://facebook.com" target="_blank" class="text-[#1877F2] hover:scale-110 transition-transform">
+  <a href="https://web.facebook.com/caso1975" target="_blank" class="text-[#1877F2] hover:scale-110 transition-transform">
     <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24">
       <path d="M22.675 0h-21.35C.597 0 0 .597 0 1.326v21.348C0 23.403.597 
       24 1.326 24H12.82V14.708h-3.42v-3.62h3.42V8.413c0-3.39 
@@ -247,7 +247,7 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
   </a>
 
   <!-- Instagram -->
-  <a href="https://instagram.com" target="_blank" class="text-[#E4405F] hover:scale-110 transition-transform">
+  <a href="https://www.instagram.com/cristiansegueldiputado" target="_blank" class="text-[#E4405F] hover:scale-110 transition-transform">
     <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24">
       <path d="M12 2.163c3.204 0 3.584.012 4.85.07 
       1.366.062 2.633.35 3.608 1.325.975.975 
@@ -275,7 +275,7 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
   </a>
 
   <!-- TikTok -->
-  <a href="https://tiktok.com" target="_blank" class="text-black hover:scale-110 transition-transform">
+  <a href="https://www.tiktok.com/@cristian_seguel_olivos?_t=ZM-90B16ZlMGnw&_r=1" target="_blank" class="text-black hover:scale-110 transition-transform">
     <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24">
       <path d="M12.525 2c1.227 1.053 2.74 1.73 4.473 
       1.73V7.23c-.855-.09-1.68-.33-2.43-.705v7.05c0 
@@ -287,16 +287,14 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
     </svg>
   </a>
 
-  <!-- X (Twitter) -->
-  <a href="https://x.com" target="_blank" class="text-black hover:scale-110 transition-transform">
+  <!-- Gmail -->
+  <a href="mailto:cristiansegueldiputado@gmail.com" target="_blank" class="text-red-600 hover:scale-110 transition-transform">
     <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24">
-      <path d="M18.244 2H21.5l-7.42 8.49L22.5 22h-7.02l-5.46-6.51L4.5 
-      22H1.24l7.92-9.05L1.5 2h7.02l4.98 
-      5.94L18.244 2zm-2.52 18h2.34L8.27 
-      4h-2.34l9.79 16z"/>
+      <path d="M12 13.065l-11.364-7.65v13.585h22.728v-13.585l-11.364 7.65zm0-2.13l11.364-7.65h-22.728l11.364 7.65z"/>
     </svg>
   </a>
 </div>
+
 
      <!-- Botón WhatsApp siempre en el centro del viewport -->
 <a
