--- a/propuestas.html
+++ b/propuestas.html
@@ -195,11 +195,70 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
 <footer class="bg-background-light dark:bg-background-dark mt-16 border-t border-border-light dark:border-border-dark">
   <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 text-center text-text-muted-light dark:text-text-muted-dark">
     <p>© 2025 Cristian Seguel Olivos - Vote i 71</p>
-    <div class="flex justify-center gap-4 mt-4">
-      <a class="hover:text-primary" href="#">Facebook</a>
-      <a class="hover:text-primary" href="#">Twitter</a>
-      <a class="hover:text-primary" href="#">Instagram</a>
-    </div>
+  <!-- Redes Sociales -->
+<div class="flex justify-center space-x-8 mt-10">
+  <!-- Facebook -->
+  <a href="https://web.facebook.com/caso1975" target="_blank" class="text-[#1877F2] hover:scale-110 transition-transform">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M22.675 0h-21.35C.597 0 0 .597 0 1.326v21.348C0 23.403.597 
+      24 1.326 24H12.82V14.708h-3.42v-3.62h3.42V8.413c0-3.39 
+      2.073-5.238 5.096-5.238 1.45 0 2.695.108 
+      3.057.156v3.55h-2.097c-1.647 0-1.966.784-1.966 
+      1.933v2.54h3.932l-.512 3.62h-3.42V24h6.705C23.403 
+      24 24 23.403 24 22.674V1.326C24 
+      .597 23.403 0 22.675 0z"/>
+    </svg>
+  </a>
+
+  <!-- Instagram -->
+  <a href="https://www.instagram.com/cristiansegueldiputado" target="_blank" class="text-[#E4405F] hover:scale-110 transition-transform">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M12 2.163c3.204 0 3.584.012 4.85.07 
+      1.366.062 2.633.35 3.608 1.325.975.975 
+      1.263 2.242 1.325 3.608.058 1.266.07 
+      1.646.07 4.85s-.012 3.584-.07 
+      4.85c-.062 1.366-.35 2.633-1.325 
+      3.608-.975.975-2.242 1.263-3.608 
+      1.325-1.266.058-1.646.07-4.85.07s-3.584-.012-4.85-.07c-1.366-.062-2.633-.35-3.608-1.325-.975-.975-1.263-2.242-1.325-3.608C2.175 
+      15.747 2.163 15.367 2.163 12s.012-3.584.07-4.85c.062-1.366.35-2.633 
+      1.325-3.608C4.533 2.583 5.8 2.295 7.166 
+      2.233 8.432 2.175 8.812 2.163 12 
+      2.163zm0 1.687c-3.155 0-3.507.012-4.737.07-1.022.047-1.577.217-1.945.363-.49.19-.84.416-1.21.787-.37.37-.597.72-.787 
+      1.21-.146.368-.316.923-.363 1.945-.058 
+      1.23-.07 1.582-.07 4.737s.012 3.507.07 
+      4.737c.047 1.022.217 1.577.363 
+      1.945.19.49.416.84.787 1.21.37.37.72.597 
+      1.21.787.368.146.923.316 1.945.363 1.23.058 
+      1.582.07 4.737.07s3.507-.012 
+      4.737-.07c1.022-.047 1.577-.217 
+      1.945-.363.49-.19.84-.416 1.21-.787.37-.37.597-.72.787-1.21.146-.368.316-.923.363-1.945.058-1.23.07-1.582.07-4.737s-.012-3.507-.07-4.737c-.047-1.022-.217-1.577-.363-1.945-.19-.49-.416-.84-.787-1.21-.37-.37-.72-.597-1.21-.787-.368-.146-.923-.316-1.945-.363-1.23-.058-1.582-.07-4.737-.07zm0 
+      3.905a5.932 5.932 0 110 11.865 5.932 5.932 0 010-11.865zm0 
+      9.8a3.867 3.867 0 100-7.735 3.867 3.867 0 000 7.735zm6.406-10.845a1.44 
+      1.44 0 11-2.88 0 1.44 1.44 0 012.88 0z"/>
+    </svg>
+  </a>
+
+  <!-- TikTok -->
+  <a href="https://www.tiktok.com/@cristian_seguel_olivos?_t=ZM-90B16ZlMGnw&_r=1" target="_blank" class="text-black hover:scale-110 transition-transform">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M12.525 2c1.227 1.053 2.74 1.73 4.473 
+      1.73V7.23c-.855-.09-1.68-.33-2.43-.705v7.05c0 
+      2.73-2.22 4.95-4.95 4.95S4.668 16.305 
+      4.668 13.575c0-2.73 2.22-4.95 4.95-4.95.345 
+      0 .675.03 1 .105v2.43c-.315-.105-.66-.165-1-.165-1.38 
+      0-2.52 1.14-2.52 2.52s1.14 2.52 2.52 
+      2.52c1.38 0 2.52-1.14 2.52-2.52V2h1.387z"/>
+    </svg>
+  </a>
+
+  <!-- Gmail -->
+  <a href="mailto:cristiansegueldiputado@gmail.com" target="_blank" class="text-red-600 hover:scale-110 transition-transform">
+    <svg xmlns="http://www.w3.org/2000/svg" class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M12 13.065l-11.364-7.65v13.585h22.728v-13.585l-11.364 7.65zm0-2.13l11.364-7.65h-22.728l11.364 7.65z"/>
+    </svg>
+  </a>
+</div>
+
   </div>
 </footer>
 
